Fix invisible text on ios 0.0.3

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -90,8 +90,8 @@
     justify-content: center;
     align-items: center;
     background-color: #05d;
-    background-image: linear-gradient(315deg, #4da1f0 0%, #ed11f5 100%);
-
+    background: linear-gradient(315deg, #4da1f0 0%, #ed11f5 100%);
+    background: -webkit-linear-gradient(315deg, #4da1f0 0%, #ed11f5 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -99,6 +99,7 @@
     -webkit-box-decoration-break: clone;
     padding: 1.25rem;
     h2 {
+      display: inline;
       font-size: 1.5rem;
     }
     span {
